--- a/css/assignment03.css
+++ b/css/assignment03.css
@@ -16,19 +16,16 @@ h1{
 
 h2{
     background-color: red;
-    margin-left: auto;
-    margin-right: 0;
+    padding: 0 auto;
 }
 
-.div4{
+.div4 ul{
     background-color: rgb(0, 180, 180);
 }
 
 .div4 li{
     color: rgb(185, 0, 0);
+    font-size: 1rem;
 }
-.div5.box1{
-    background-color: red;
-    width: 3rem;
-}
+
 
