--- a/css/assignment03.css
+++ b/css/assignment03.css
@@ -14,13 +14,17 @@ h1{
     text-align: left;
 }
 
-h2{
+.h2{
     background-color: red;
-    padding: 0 auto;
+}
+
+.h2 h2{
+    text-align: right;
 }
 
 .div4 ul{
     background-color: rgb(0, 180, 180);
+    width: 25%;
 }
 
 .div4 li{
@@ -28,4 +32,20 @@ h2{
     font-size: 1rem;
 }
 
-
+.div5 ul{
+    width: 25%;
+    list-style-type: none;
+    padding-left: 0;
+}
+.li1{
+    background-color: red;
+    padding: 3%;
+}
+.li2{
+    background-color: rgb(209, 58, 58);
+    padding: 3%;
+}
+.li3{
+    background-color: rgb(139, 29, 139);
+    padding: 3%;
+}
