--- a/assets/css/assignment06.css
+++ b/assets/css/assignment06.css
@@ -12,7 +12,7 @@ nav{
 nav ul{
     list-style-type:🎅;
     /* 
-    css burdaki kodu sitede gostermedigi icin html tarafinda span ile yaptim
+    this code does not work properly
      */
 }
 
