--- a/assets/css/pop-up-menu.css
+++ b/assets/css/pop-up-menu.css
@@ -1,23 +1,25 @@
-.menubound{
-    
-    width: 15%;
-}
 
-.cbox{
+.bars{
     display: none;
 }
 
-.menuicon{
+.menubars{
     cursor: pointer;
 }
 
+
 .bars:checked .menu{
-    background-color: red;
+    display: block;
 }
 
+.menubound{
+    width: 10rem;
+    
+}
 
 .menu{
-    padding: 0.7rem;
+    display: none;
+    padding: 0 0 0 0.5rem;
     background-color: rgb(170, 170, 170);
     margin: 0.5rem 0;
 }
@@ -25,9 +27,7 @@
 .menu li{
     list-style-type: "::";
     text-align: center;
-    padding: 0.5rem 0;
-    
-    
+    padding: 0.5rem;
 }
 
 .menu a{
@@ -36,7 +36,7 @@
     color: white;
 }
 
-.menu a:hover{
+.menu li:hover{
     background-color: rgb(63, 63, 63);
 }
 
