--- a/assets/css/shopping-cart.css
+++ b/assets/css/shopping-cart.css
@@ -1,7 +1,27 @@
+div .button1{
+    background-color: rgb(255, 83, 83);
+    padding: 0.7rem 0.3rem ;
+    font-size: 1rem;
+    color: white;
+    border: none;
+
+}
+
+div .button2{
+    background-color: rgb(255, 83, 83);
+    padding: 0.7rem 0.3rem ;
+    font-size: 1rem;
+    color: white;
+    border: none;
+
+}
+
 .table{
     font-family: 'Poppins', sans-serif;
     width: 30%;
     height: 10%;
+    border: 1;
+    border-color: white;
 }
 
 .table .head{
@@ -9,8 +29,16 @@
     color: white;
 }
 
-.table .head:first-child, .head:nth-child(2){
+.table .head td:first-child, .head td:nth-child(2){
     text-align: left;
+}
+
+.table .head td:nth-child(3){
+    text-align: center;
+}
+
+.table .head td:nth-child(4), .head td:nth-child(5){
+    text-align: right;
 }
 
 .table .body tr:nth-child(odd){
@@ -19,6 +47,18 @@
 
 .table .body tr:nth-child(even){
     background-color: rgb(214, 214, 214);    
+}
+
+.table .body td:first-child, .body td:nth-child(2){
+    text-align: left;
+}
+
+.table .body td:nth-child(3){
+    text-align: center;
+}
+
+.table .body td:nth-child(4), .body td:nth-child(5){
+    text-align: right;
 }
 
 .table .foot{
