--- a/assets/css/shopping-cart.css
+++ b/assets/css/shopping-cart.css
@@ -1,3 +1,12 @@
+div.buttons{
+    background-color: green;
+    display: inline-block;
+    width:30% ;
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+}
+
 div .button1{
     background-color: rgb(255, 83, 83);
     padding: 0.7rem 0.3rem ;
@@ -11,8 +20,10 @@ div .button2{
     background-color: rgb(255, 83, 83);
     padding: 0.7rem 0.3rem ;
     font-size: 1rem;
+    margin-right: 0;
     color: white;
     border: none;
+    
 
 }
 
