--- a/assets/css/shopping-cart.css
+++ b/assets/css/shopping-cart.css
@@ -1,10 +1,8 @@
+
 div.buttons{
-    background-color: green;
-    display: inline-block;
-    width:30% ;
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
+    padding: 0.5rem 0;
+    
+
 }
 
 div .button1{
@@ -13,26 +11,34 @@ div .button1{
     font-size: 1rem;
     color: white;
     border: none;
-
+    margin-right: 0.5rem;
 }
 
 div .button2{
     background-color: rgb(255, 83, 83);
     padding: 0.7rem 0.3rem ;
     font-size: 1rem;
-    margin-right: 0;
     color: white;
     border: none;
-    
 
 }
 
+div .button1:hover{
+    background-color: rgb(218, 49, 49);
+    cursor: pointer;
+}
+
+div .button2:hover{
+    background-color: rgb(218, 49, 49);
+    cursor: pointer;
+}
+
+
 .table{
     font-family: 'Poppins', sans-serif;
-    width: 30%;
-    height: 10%;
     border: 1;
     border-color: white;
+    width: 30%;
 }
 
 .table .head{
