--- a/assets/css/login-screen.css
+++ b/assets/css/login-screen.css
@@ -22,7 +22,6 @@ div.templet .signin{
 }
 
 div.templet .design{
-
     color: white;
 
     background-image: url("../img/bg-login.jpg");
@@ -32,6 +31,10 @@ div.templet .design{
     text-align: center;
 
     flex: 6;
+}
 
+div.templet .design h1, h3{
     
+    justify-content: center;
+    align-items: center;
 }
