--- a/assets/css/login-screen.css
+++ b/assets/css/login-screen.css
@@ -1,3 +1,7 @@
+:root{
+    --color1 : rgb(83, 0, 94);
+}
+
 body{
     margin: 0;
 }
@@ -6,7 +10,7 @@ div.templet{
     padding: 1rem;
     display: flex;
 
-    background-color: rgb(83, 0, 94);
+    background-color: var(--color1);
 
     height: 100vh;
 
@@ -59,10 +63,19 @@ div.templet div.signin form{
 
 
 div.log .enter {
-    position: absolute;
-    left: 40%;
-    right: 40%;
-    bottom: 5rem;
+}
+
+div.log .enter button{
+    background-color: var(--color1);
+    color: white;
+
+    padding: 0.5rem 5rem;
+    border-radius: 10px;
+
+    font-size: 15px;
+    font-weight: bold;
+
+    
 }
 
 
