--- a/assets/css/login-screen.css
+++ b/assets/css/login-screen.css
@@ -55,10 +55,11 @@ div.signin h2{
 
 div.signin form input{
     width: 300px; 
+    margin-bottom: 1.5rem;
     height: 25px;  
+    border: none;
+    border-bottom: 2px solid rgb(192, 192, 192);
 }
-
-
 
 
 div.log .enter {
@@ -76,8 +77,14 @@ div.log .enter button{
     font-weight: bold;
 
     position: relative;
-    top: 7rem;
+    top: 6rem;
     
+    box-shadow: 0 4px 20px rgb(50, 0, 56);
+}
+
+div.log .enter button:hover{
+    background-color: rgb(139, 10, 122);
+    cursor: pointer;
 }
 
 
