--- a/assets/css/login-screen.css
+++ b/assets/css/login-screen.css
@@ -15,6 +15,7 @@ div.templet{
     height: 100vh;
 
     font-family: 'Open Sans', sans-serif;
+
 }
 
 
@@ -33,6 +34,9 @@ div.templet .log{
     flex: 4;
 
     position: relative;
+
+    border-top-left-radius:10px ;
+    border-bottom-left-radius:10px ;
 }
 
 div.log .go-home{
@@ -107,6 +111,9 @@ div.templet .design{
     background-position: center;
 
     position: relative;
+
+    border-top-right-radius:10px ;
+    border-bottom-right-radius:10px ;
 }
 
 div.templet .design h1{
@@ -126,6 +133,9 @@ div.templet .design h3{
     position: absolute;
     top: 0; left: 0; right: 0; bottom: 0;
     opacity: 0.3;
+
+    border-top-right-radius:10px ;
+    border-bottom-right-radius:10px ;
 }
 
 
