--- a/assets/css/pop-up-menu.css
+++ b/assets/css/pop-up-menu.css
@@ -1,19 +1,10 @@
-.menubars{
-    cursor: pointer;
-}
-
-.mbars{
-    display: none;
-}
-
-.menu{
-    display: none;
-}
-
-.cbox:checked .menu{
+ul{
     display: block;
 }
 
+.cbox:checked + ul{
+    display: none;
+}
 
 
  
