--- a/assets/css/pop-up-menu.css
+++ b/assets/css/pop-up-menu.css
@@ -30,13 +30,14 @@ ul.menulist a{
 
 ul.menulist li{
     text-align: center;
-    padding: 1rem 0;
+    padding-top: .7rem;
+    padding-bottom: .7rem;
     width: 100%;
     height: 100%;
 }
 
 
-ul.menulist li:hover{
+ul.menulist a:hover{
     background-color: rgb(88, 88, 88);
     cursor: pointer;
 }
