--- a/assets/css/pop-up-menu.css
+++ b/assets/css/pop-up-menu.css
@@ -24,8 +24,8 @@ ul.menulist{
 ul.menulist a{
     text-decoration: none;
     color: white;
-    width: 100%;
-    height: 100%;
+    padding: 0.5rem 1.5rem;
+    
 }
 
 ul.menulist li{
@@ -38,6 +38,11 @@ ul.menulist li{
 
 
 ul.menulist a:hover{
+    background-color: rgb(88, 88, 88);
+    cursor: pointer;
+}
+
+ul.menulist li:hover{
     background-color: rgb(88, 88, 88);
     cursor: pointer;
 }
